--- a/customer.yml
+++ b/customer.yml
@@ -8,3 +8,8 @@ spring:
       database: customer # The database your app will primarily use
       authentication-database-name: admin # The database where the 'root' user is defined
       uri: mongodb://admin:admin@localhost:27018/customer?authSource=admin&authMechanism=SCRAM-SHA-1
+ api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
