--- a/customer.yml
+++ b/customer.yml
@@ -15,10 +15,11 @@ logging:
 
 # Correct springdoc properties (note the top-level placement)
 springdoc:
+  show-actuator: true
   api-docs:
-    enabled: true
     path: /v3/api-docs
   swagger-ui:
-    enabled: true
     path: /swagger-ui.html
     url: /v3/api-docs
+    operations-sorter: method
+    tags-sorter: alpha
