--- a/customer.yml
+++ b/customer.yml
@@ -15,11 +15,9 @@ logging:
 
 # Correct springdoc properties (note the top-level placement)
 springdoc:
-  show-actuator: true
   api-docs:
-    path: /v3/api-docs
+    enabled: true
   swagger-ui:
+    enabled: true
     path: /swagger-ui.html
-    url: /v3/api-docs
-    operations-sorter: method
-    tags-sorter: alpha
+
