--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,13 +1,12 @@
 server:
-    port: 8761
-
+  port: 8761
+  
 eureka:
-   instance:
-     hostname: localhost
+  instance:
+    hostname: eurekaServer  # Matches your Docker container name
 
-   client:
-     registerWithEureka: false
-     fetchRegistry: false
-serviceUrl:
-    defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
-
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://eurekaServer:8761/eureka
