--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,12 +1,20 @@
+spring:
+  
 server:
   port: 8761
-  
+
 eureka:
   instance:
-    hostname: eurekaServer  # Matches your Docker container name
-
+    hostname: eureka-server
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://eurekaServer:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
