--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -9,6 +9,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    serviceUrl:
+    defaultZone: http://eureka-server:8761/eureka
 
 
 management:
