--- a/customer.yml
+++ b/customer.yml
@@ -7,12 +7,10 @@ spring:
 
 eureka:
   client:
-    service-url:
-      #defaultZone: http://localhost:8761/eureka/
-      # If running in Docker with service discovery, use:
-       defaultZone: http://eureka-server:8761/eureka/
-    fetch-registry: true
-    register-with-eureka: true
+    serviceUrl:
+      defaultZone: http://eureka-server:8761/eureka/
+  instance:
+    preferIpAddress: false
 
 logging:
   level:
