Update and rename productservice.yml to product-service.yml

--- a/product-service.yml
+++ b/product-service.yml
@@ -24,9 +24,9 @@ spring:
     healthcheck:
       enabled: true
   instance:
-    hostname: customer-service  # Changed from ms_customer
+    hostname: product-service  # Changed from ms_customer
     preferIpAddress: false
-    appname: customer-service
+    appname: product-serivce
     leaseRenewalIntervalInSeconds: 10
     leaseExpirationDurationInSeconds: 30  
 
