--- a/product-service.yml
+++ b/product-service.yml
@@ -5,17 +5,18 @@ spring:
     password: password
     driver-class-name: org.postgresql.Driver
   jpa:
-    hibernate.ddl-auto: update
+    hibernate:
+      ddl-auto: update
     show-sql: true
     database: postgresql
-    properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-    database-platform: org.hibernate.dialect.PostgreSQL95Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
     baseline-on-migrate: true
     enabled: true
     baseline-description: Initial migration
     baseline-version: 1.0
-  eureka:
+
+eureka:
   client:
     registerWithEureka: true
     fetchRegistry: true
@@ -24,12 +25,13 @@ spring:
     healthcheck:
       enabled: true
   instance:
-    hostname: product-service  # Changed from ms_customer
+    hostname: product-service
     preferIpAddress: false
-    appname: product-serivce
+    appname: product-service
     leaseRenewalIntervalInSeconds: 10
-    leaseExpirationDurationInSeconds: 30  
-  management:
+    leaseExpirationDurationInSeconds: 30
+
+management:
   endpoint:
     health:
       show-details: always
@@ -55,5 +57,4 @@ springdoc:
     enabled: true
   swagger-ui:
     enabled: true
-    path: /swagger-ui.html  
-
+    path: /swagger-ui.html
