--- a/product-service.yml
+++ b/product-service.yml
@@ -6,13 +6,12 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
-    database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
-    baseline-on-migrate: true
     enabled: true
+    baseline-on-migrate: true
     baseline-description: Initial migration
     baseline-version: 1.0
 
