--- a/product-service.yml
+++ b/product-service.yml
@@ -1,4 +1,13 @@
+server:
+  port: 8091
+
 spring:
+  application:
+    name: product-service
+  config:
+    import: optional:configserver:http://config-server:8888
+  profiles:
+    active: docker
   datasource:
     url: jdbc:postgresql://postgres:5432/product
     username: postgres
@@ -6,7 +15,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: none  # Ensure Flyway creates schema, or use 'update' temporarily for dev
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
@@ -24,25 +33,30 @@ eureka:
     healthcheck:
       enabled: true
   instance:
-    hostname: product-service  # Changed from ms_customer
+    hostname: product-service
     preferIpAddress: false
     appname: product-service
     leaseRenewalIntervalInSeconds: 10
     leaseExpirationDurationInSeconds: 30
 
 management:
-  endpoint:
-    health:
-      show-details: always
   endpoints:
     web:
       exposure:
         include: "*"
+  endpoint:
+    health:
+      show-details: always
   health:
     mongo:
-      enabled: true
+      enabled: false  # Set to false if not using MongoDB here
     diskspace:
       enabled: true
+
+info:
+  app.name: product-service
+  build.version: ${git.commit.id.abbrev}
+  contact.email: e-commerce@gmail.com
 
 logging:
   level:
