--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -10,7 +10,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-    defaultZone: http://eureka-server:8761/eureka
+    defaultZone: http://localhost:8761/eureka
 
 
 management:
@@ -18,3 +18,4 @@ management:
     web:
       exposure:
         include: "*"
+
