--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,21 +1,19 @@
 spring:
-  
+
 server:
-  port: 8761
+  port: 8761   # Eureka server will run on port 8761
 
 eureka:
   instance:
-    hostname: eureka-server
+    hostname: localhost
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: false   # This service will NOT register itself (because it is the Eureka server itself)
+    fetchRegistry: false        # This service will NOT try to fetch other service instances (again, because it is the server)
     serviceUrl:
-    defaultZone: http://localhost:8761/eureka
-
+      defaultZone: http://localhost:8761/eureka  # The default registry URL
 
 management:
   endpoints:
     web:
       exposure:
-        include: "*"
-
+        include: "*"   # Exposes all actuator endpoints (e.g., /actuator/health, /actuator/info, etc.)
