--- a/order-service.yml
+++ b/order-service.yml
@@ -13,6 +13,15 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.MySQL8Dialect
+  kafka:
+    producer:
+      bootstrap-servers: localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.type.mapping:
+          orderConfirmation: com.e_commerce_project.orderservice.Records.OrderConfirmation
+
 
 server:
   port: 8070
