--- a/payment-service.yml
+++ b/payment-service.yml
@@ -1,74 +1,46 @@
 spring:
   datasource:
-    url: jdbc:mysql://payment_mysql:3306/payment_service
+    url: jdbc:mysql://mysql_payment:3306/payment_service?allowPublicKeyRetrieval=true&useSSL=false
     username: root
-    password: password
+    password: mysql
     driver-class-name: com.mysql.cj.jdbc.Driver
+
   config:
     import: optional:configserver:http://config-server:8888
-    profiles:
-      active: docker
+
+  profiles:
+    active: docker
+
   jpa:
     hibernate:
       ddl-auto: update
-      database: mysql
-      show-sql: true
-      database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
+
   kafka:
     producer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: kafka:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      properties:
-        spring.json.type.mapping:
-          PaymentRequest: com.e_commerce_project.PaymentService.Records.paymentNotificationRequest
-  eureka:
-    client:
-      registerWithEureka: true
-      fetchRegistry: true
-      serviceUrl:
-        defaultZone: http://eureka-server:8761/eureka/
-      healthcheck:
-        enabled: true
-    instance:
-      hostname: payment-service
-      preferIpAddress: false
-      appname: payment-service
-      leaseRenewalIntervalInSeconds: 10
-      leaseExpirationDurationInSeconds: 30
-  management:
-    endpoints:
-      web:
-        exposure:
-          include: "*"
-    endpoint:
-      health:
-        show-details: always
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
+  instance:
+    hostname: payment-service
+    prefer-ip-address: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
     health:
-      mongo:
-        enabled: false
-      diskspace:
-        enabled: true
+      show-details: always
 
-  info:
-    app.name: order-service
-    build.version: ${git.commit.id.abbrev}
-    contact.email: e-commerce@gmail.com
-
-  logging:
-    level:
-      org.springframework.cloud: DEBUG
-      com.netflix.eureka: DEBUG
-      com.netflix.discovery: DEBUG
-      root: INFO
-
-  springdoc:
-    api-docs:
-      enabled: true
-    swagger-ui:
-      enabled: true
-      path: /swagger-ui.html
-
-
-  server:
-    port: 8060
+server:
+  port: 8060
