--- a/payment-service.yml
+++ b/payment-service.yml
@@ -28,7 +28,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://eureka-server:8761/eureka/
+      defaultZone: http://eureka_server:8761/eureka/
   instance:
     hostname: payment-service
     prefer-ip-address: false
