--- a/order-service.yml
+++ b/order-service.yml
@@ -1,9 +1,4 @@
-spring:
-  config:
-    import: optional:configserver:http://config-server:8888
-  profiles:
-    active: docker
-
+spring: 
   datasource:
      url: jdbc:mysql://ms_mysql:3306/order_service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
@@ -15,7 +10,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
   kafka:
     producer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: kafka:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
@@ -36,7 +31,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/
+      defaultZone: http://eureka_server:8761/eureka/
     healthcheck:
       enabled: true
   instance:
