--- a/customer-service.yml
+++ b/customer-service.yml
@@ -1,10 +1,54 @@
 spring:
-  data:
+    data:
     mongodb:
-      username: admin
-      password: admin
-      host: localhost
-      port: 27018
-      database: customer # The database your app will primarily use
-      authentication-database-name: admin # The database where the 'root' user is defined
-      uri: mongodb://admin:admin@localhost:27018/customer?authSource=admin&authMechanism=SCRAM-SHA-1
+      uri: mongodb://admin:admin@mongo_db:27017/customer?authSource=admin&authMechanism=SCRAM-SHA-1
+  cloud:
+    inetutils:
+      preferred-networks:
+        - 172. # Docker network range
+
+server:
+  port: 8090
+
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://eureka-server:8761/eureka/
+    healthcheck:
+      enabled: true
+  instance:
+    hostname: customer-service  # Changed from ms_customer
+    preferIpAddress: false
+    appname: customer-service
+    leaseRenewalIntervalInSeconds: 10
+    leaseExpirationDurationInSeconds: 30
+
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  health:
+    mongo:
+      enabled: true
+    diskspace:
+      enabled: true
+
+logging:
+  level:
+    org.springframework.cloud: DEBUG
+    com.netflix.eureka: DEBUG
+    com.netflix.discovery: DEBUG
+    root: INFO
+
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
