Configure Kafka bootstrap servers and properties
Added Kafka bootstrap server configuration and updated producer and consumer properties.

--- a/order-service.yml
+++ b/order-service.yml
@@ -8,13 +8,18 @@ spring:
       ddl-auto: update
     database-platform: org.hibernate.dialect.MySQL8Dialect
   kafka:
+    bootstrap-servers: kafka:9092
+
     producer:
-      bootstrap-servers: kafka:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
-        spring.json.type.mapping:
-          orderConfirmation: com.e_commerce_project.orderservice.Records.OrderConfirmation
+        spring.json.type.mapping: orderConfirmation:com.e_commerce_project.orderservice.Records.OrderConfirmation
+
+    consumer:
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
 
 server:
   port: 8070
