--- a/notification-service.yml
+++ b/notification-service.yml
@@ -28,7 +28,8 @@ spring:
       group-id: notification-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JacksonJsonDeserializer
+
       properties:
         spring.json.type.mapping: >
           orderconfirmation:e_Commerce_project.Notification.Records.OderConfirmation,
@@ -44,3 +45,4 @@ eureka:
   instance:
     prefer-ip-address: false
     hostname: notification-service
+
