--- a/notification-service.yml
+++ b/notification-service.yml
@@ -28,13 +28,13 @@ spring:
       group-id: notification-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JacksonJsonDeserializer
-
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       properties:
+        spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
+        spring.json.trusted.packages: "*"
         spring.json.type.mapping: >
           orderconfirmation:e_Commerce_project.Notification.Records.OderConfirmation,
           paymentconfirmation:e_Commerce_project.Notification.Records.Paymentconfirmation
-        spring.json.trusted.packages: "*"
 
 eureka:
   client:
@@ -45,4 +45,5 @@ eureka:
   instance:
     prefer-ip-address: false
     hostname: notification-service
+
 
