--- a/notification-service.yml
+++ b/notification-service.yml
@@ -33,8 +33,8 @@ spring:
         spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
         spring.json.trusted.packages: "*"
         spring.json.type.mapping: >
-          orderconfirmation:e_Commerce_project.Notification.Records.OderConfirmation,
-          paymentconfirmation:e_Commerce_project.Notification.Records.Paymentconfirmation
+          OrderConfirmation:e_Commerce_project.Notification.Records.OrderConfirmation,
+          PaymentConfirmation:e_Commerce_project.Notification.Records.PaymentConfirmation
 
 eureka:
   client:
