--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -5,12 +5,12 @@ server:
 
 eureka:
   instance:
-    hostname: eureka-server
+    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-    defaultZone: http://eureka-server:8761/eureka
+    defaultZone: http://localhost:8761/eureka
 
 
 management:
@@ -18,5 +18,6 @@ management:
     web:
       exposure:
         include: "*"
+
 
 
